# dev5-class

1_txt/: todo.txt
2_static_html/: index.html  package-lock.json  package.json
3_dynamic_style/: .gitignore  index.html  index.js  package-lock.json  style.css
4_dynamic_html/: index.html  index.js  package-lock.json  package.json  style.css
5_js_view_model/: app.vue  index.html  package-lock.json  package.json
6_naive_backend/: pyproject.toml
6_naive_backend/tests/: test_create.py  test_delete.py  test_update.py
6_naive_backend/todo_server/: app_factory.py
7_front_back/: .gitignore  TodoClient.js  app.vue  package-lock.json  package.json
