[tool.poetry]
name = "todo_server"
version = "0.1.0"
description = ""
authors = ["yvasquez <yuri.vasquez@tvglobo.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
hypercorn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
